--- a/docs/oas/docs.yaml
+++ b/docs/oas/docs.yaml
@@ -30,6 +30,10 @@ paths:
 
 
 components:
+  schemas:
+    Empty:
+      example: { }
+      type: object
   securitySchemes:
     jwt:
       type: http
