--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,5 +30,5 @@ jobs:
     - name: Create deploy config
       run: echo "${{ secrets.DEPLOY_CONFIG_YAML }}" > deploy_config.yaml
 
-    - name: Deploy AWS Lambda\
+    - name: Deploy AWS Lambda
       run: make lambda-deploy
